# src/controllers/book.controller.ts
@@ -1,40 +1,78 @@
-import { Body, Controller, Get, Post, Route, Tags } from "tsoa";
-import { BookDTO } from "../dto/book.dto";
-import { bookService } from "../services/book.service";
-import { CustomError } from "../middlewares/errorHandler";
-import { Book } from "../models/book.model";
-import { toDto } from "../mapper/book.mapper";
+import {Body, Controller, Delete, Get, Patch, Path, Post, Route, Tags, Security} from "tsoa";
+import {BookDTO} from "../dto/book.dto";
+import {bookService} from "../services/book.service";
+import {CustomError} from "../middlewares/errorHandler";
+import {Book} from "../models/book.model";
+import {BookCopyDTO} from "../dto/bookCopy.dto";
+import {bookCopyService} from "../services/bookCopy.service";
 
 @Route("books")
 @Tags("Books")
+@Security("jwt")
 export class BookController extends Controller {
-  @Get("/")
-  public async getAllBooks(): Promise<BookDTO[]> {
-    return bookService.getAllBooks();
-  }
-
-  @Get("{id}")
-  public async getBoodById(id: number): Promise<BookDTO> {
-    let book: Book | null = await bookService.getBookById(id); 
-
-    if(book === null) {
-      let error: CustomError = new Error(`Book ${id} not found`);
-      error.status = 404;
-      throw error;
+    @Get("/")
+    public async getAllBooks(): Promise<BookDTO[]> {
+        return bookService.getAllBooks();
     }
 
-    return toDto(book);
-  }
-
-  @Post("/")
-  public async createBook(@Body() requestBody: BookDTO): Promise<BookDTO> {
-    let { title, publishYear, author, isbn } = requestBody;
-    
-    if(author?.id === undefined) {
-      let error: CustomError = new Error("Author ID is required to create a book");
-      error.status = 400;
-      throw error;
+    // Récupère un livre par ID
+    @Get("/{id}")
+    public async getBookById(@Path() id: number): Promise<BookDTO | null> {
+        const book: Book | null = await bookService.getBookById(id);
+        if (!book) {
+            let error: CustomError = new Error("Book not found");
+            error.status = 404;
+            throw error;
+        }
+        return book;
     }
-    return bookService.createBook(title, publishYear, author?.id, isbn)
-  }
+
+    // Crée un nouveau livre
+    @Post("/")
+    public async createBook(
+        @Body() requestBody: BookDTO
+    ): Promise<BookDTO> {
+        const {
+            title,
+            publishYear,
+            author,
+            isbn
+        } = requestBody;
+        return bookService.createBook(title, publishYear, author, isbn);
+    }
+
+    // Met à jour un livre par ID
+    @Patch("{id}")
+    public async updateBook(
+        @Path() id: number,
+        @Body() requestBody: BookDTO
+    ): Promise<BookDTO | null> {
+        const {title, publishYear, author, isbn} = requestBody;
+        const book: Book | null = await bookService.updateBook(id, title, publishYear, author, isbn);
+        if (!book) {
+            let error: CustomError = new Error("Book not found");
+            error.status = 404;
+            throw error;
+        }
+        return book;
+    }
+
+    // Supprime un livre par ID
+    @Delete("{id}")
+    public async deleteBook(@Path() id: number): Promise<void> {
+        await bookService.deleteBook(id);
+    }
+
+    // Récupère les copies d'un livre par ID
+    @Get("/{id}/bookCopys")
+    public async getBookBookCopysById(@Path() id: number): Promise<BookCopyDTO[] | null> {
+        const book: Book | null = await bookService.getBookById(id);
+        if (!book) {
+            let error: CustomError = new Error("Book not found");
+            error.status = 404;
+            throw error;
+        }
+
+        return bookCopyService.getBookCopysByBookId(id);
+    }
 }
